tests/baselines/reference/incorrectClassOverloadChain.errors.txt
==== tests/cases/compiler/incorrectClassOverloadChain.ts (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        x = 1;
        ~
!!! incorrectClassOverloadChain.ts(4,5): error TS1041: Function implementation expected.
    }